--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@paypal/react-paypal-js": "^8.8.1",
     "@prisma/adapter-neon": "^6.2.1",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-dialog": "^1.1.5",
